--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://{aniahb101}.github.io/se_project_react/",
+  "homepage": "https://aniahb101.github.io/se_project_react/",
   "scripts": {
     "dev": "vite --open",
     "build": "vite build",
